# arbeitsplatz

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
arbeitsplatz/: buchungen.db  buchungstool.py  notebook.ipynb  plaetze.json  pyproject.toml
arbeitsplatz/arbeitsplatz/: arbeitsplatz.py  bookings.db  buchungen.db  buchungstool.py  notebook.ipynb
