[tool.poetry]
name = "arbeitsplatz"
version = "0.1.0"
description = ""
authors = ["André Wendler <42637005+a-wendler@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.31.0"
pandas = "^2.2.0"
ipykernel = "^6.29.0"
sqlalchemy = "^2.0.25"
mysql-connector-python = "^8.3.0"
mysqlclient = "^2.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
