[tool.poetry]
name = "arbeitsplatz"
version = "0.3.0"
description = ""
authors = ["André Wendler <42637005+a-wendler@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.35.0"
pandas = "^2.2.2"
ipykernel = "^6.29.0"
sqlalchemy = "^2.0.30"
mysql-connector-python = "^8.4.0"
pymysql = "^1.1.1"
cryptography = "^43.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
